Archive/17362b45ac22c864cda5c0b082537968-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:15: error: ‘Centurion’ has not been declared
 auto stream = Centurion::openAudioOStream(
               ^
main.cpp:2:2: error: ‘Centurion’ has not been declared
  Centurion::AudioStreamParameters<float>(Centurion::AudioDevice::defaultOutputDevice(), 2, 10.0),
  ^
main.cpp:2:35: error: expected primary-expression before ‘float’
  Centurion::AudioStreamParameters<float>(Centurion::AudioDevice::defaultOutputDevice(), 2, 10.0),
                                   ^
main.cpp:6:20: error: ‘SineWaveGenerator’ was not declared in this scope
  SineWaveGenerator()
                    ^
